--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -1,6 +1,6 @@
 .flexRowContent--sobre {
   max-width: 1240px;
-  margin: 0 auto;
+  margin: 2rem auto;
 }
 @media (max-width: 1024px) {
   .flexRowContent--sobre {
