--- a/styles/scss/home/vtex.flex-layout.scss
+++ b/styles/scss/home/vtex.flex-layout.scss
@@ -4,7 +4,7 @@
 // Seção "Sobre a The Mini Forest"
 .flexRowContent--sobre {
   max-width: 1240px;
-  margin: 0 auto;
+  margin: 2rem auto;
 
   @include tablet {
     display: flex;
