--- a/styles/scss/institucional/vtex.flex-layout.scss
+++ b/styles/scss/institucional/vtex.flex-layout.scss
@@ -7,7 +7,8 @@
 .flexCol--sale__all,
 .flexCol--historia__all,
 .flexCol--propriedade-industrial__all,
-.flexCol--dia-das-maes__all {
+.flexCol--dia-das-maes__all,
+.flexCol--faq-content-col {
   max-width: 1240px;
   margin: 0 auto;
   scroll-behavior: smooth;
