--- a/styles/css/institucional/vtex.flex-layout.css
+++ b/styles/css/institucional/vtex.flex-layout.css
@@ -4,7 +4,8 @@
 .flexCol--sale__all,
 .flexCol--historia__all,
 .flexCol--propriedade-industrial__all,
-.flexCol--dia-das-maes__all {
+.flexCol--dia-das-maes__all,
+.flexCol--faq-content-col {
   max-width: 1240px;
   margin: 0 auto;
   scroll-behavior: smooth;
