--- a/styles/scss/footer/vtex.store-components.scss
+++ b/styles/scss/footer/vtex.store-components.scss
@@ -14,6 +14,11 @@
 
 .inputGroup--newsletter {
   padding: 0;
+
+  @include mobile {
+    padding: 1rem;
+    width: 100%;
+  }
 }
 
 .newsletter .container {
@@ -37,6 +42,11 @@
   }
 }
 
+.container--newsletter {
+  width: 100%;
+  padding: 1rem;
+}
+
 :global(.vtex-store-components-3-x-inputGroup) {
   .vtex-buton {
     background-color: #6c9893;
@@ -49,6 +59,7 @@
   color: #7a7475;
   min-width: 310px;
   border-radius: 0;
+  padding: 1rem;
 }
 
 .inputGroup--newsletter :global(.vtex-input-prefix__group) {
