--- a/styles/scss/home/vtex.product-summary.scss
+++ b/styles/scss/home/vtex.product-summary.scss
@@ -43,8 +43,9 @@
 
   .nameContainer {
     padding-top: 0.875rem;
-    padding-bottom: 0;
-    height: 3.4375rem;
+    padding-bottom: 0.25rem;
+    min-height: 3.4375rem;
+    height: 100%;
 
     .nameWrapper {
       .brandName {
