--- a/styles/css/home/vtex.product-summary.css
+++ b/styles/css/home/vtex.product-summary.css
@@ -39,8 +39,9 @@
 }
 .element .nameContainer {
   padding-top: 0.875rem;
-  padding-bottom: 0;
-  height: 3.4375rem;
+  padding-bottom: 0.25rem;
+  min-height: 3.4375rem;
+  height: 100%;
 }
 .element .nameContainer .nameWrapper .brandName {
   color: #7a7475;
