--- a/styles/scss/header/vtex.minicart.scss
+++ b/styles/scss/header/vtex.minicart.scss
@@ -58,3 +58,12 @@
     display: none;
   }
 }
+
+.minicartEmptyStateContainer :global(.vtex-rich-text-0-x-paragraph) {
+  font-size: 0;
+  padding: 1rem;
+}
+.minicartEmptyStateContainer :global(.vtex-rich-text-0-x-paragraph)::after {
+  content: "Seu carrinho está vazio.";
+  font-size: 1rem;
+}
