--- a/styles/scss/search/vtex.breadcrumb.scss
+++ b/styles/scss/search/vtex.breadcrumb.scss
@@ -33,8 +33,8 @@
   font-size: 0.8rem;
 }
 
-@media screen and (max-width: 800px) {
-  .container {
-    display: none;
-  }
-}
+// @media screen and (max-width: 800px) {
+//   .container {
+//     display: none;
+//   }
+// }
