--- a/styles/scss/search/vtex.flex-layout.scss
+++ b/styles/scss/search/vtex.flex-layout.scss
@@ -11,3 +11,18 @@
   margin: 24px 0 0;
   min-height: 33.5px;
 }
+
+.flexColChild--orderByMobileCol {
+  height: auto !important;
+}
+
+.flexCol--orderByMobileCol {
+  align-items: center;
+  justify-content: center;
+}
+
+.flexCol--search-breadcrumb {
+  justify-content: center;
+  width: 100%;
+  padding-left: 0.75rem;
+}
