--- a/styles/css/home/vtex.product-summary.css
+++ b/styles/css/home/vtex.product-summary.css
@@ -41,7 +41,7 @@
   padding-top: 0.875rem;
   padding-bottom: 0.25rem;
   min-height: 3.4375rem;
-  height: 100%;
+  height: fit-content;
 }
 .element .nameContainer .nameWrapper .brandName {
   color: #7a7475;
