--- a/styles/scss/home/vtex.product-summary.scss
+++ b/styles/scss/home/vtex.product-summary.scss
@@ -45,7 +45,7 @@
     padding-top: 0.875rem;
     padding-bottom: 0.25rem;
     min-height: 3.4375rem;
-    height: 100%;
+    height: fit-content;
 
     .nameWrapper {
       .brandName {
