--- a/styles/css/search/vtex.rich-text.css
+++ b/styles/css/search/vtex.rich-text.css
@@ -1,1 +1,14 @@
+.headingLevel1--category-description,
+.headingLevel2--category-description {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 300;
+  font-size: 1.25rem;
+  color: #7a7475;
+}
 
+.paragraph--category-description {
+  margin: 0;
+  font-size: 13px;
+  color: #707c7c;
+}
