--- a/react/src/styles/filter-carousel.css
+++ b/react/src/styles/filter-carousel.css
@@ -39,14 +39,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #e3e4e6;
   padding: 0.5rem 0.75rem;
   font-size: 0.875rem;
   cursor: pointer;
-  background-color: #f7f7f7;
+  background-color: #efefef;
   color: #585959;
   transition: all 0.2s ease;
-  height: 40px;
+  height: 30px;
   margin: 0 5px;
   white-space: nowrap;
 }
