--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -2,6 +2,16 @@
   justify-content: space-between;
   margin-top: 1.3rem;
 }
+.menuContainer--header-category-menu .styledLinkContent--submenu-titulo {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 23px;
+  padding: 5px 0;
+  color: #71817f;
+}
+.menuContainer--header-category-menu .styledLinkContent--submenu-titulo:hover {
+  text-decoration: underline;
+}
 .menuContainer--header-category-menu .styledLinkContainer {
   margin: 0;
   padding: 0;
